fix wrapping

--- a/static/index.css
+++ b/static/index.css
@@ -15,13 +15,14 @@ html {
   margin-left: 10px;
   margin-top: 1px;
   margin-bottom: 1px;
+  min-width: 305px;
 }
 
 #leaderboard-view, #leaderboard-global-view {
   display: inline-flex;
   border-width: 1px;
   border-style: solid;
-  border-color: black;
+  border-color: #c0c5ce;
   margin-top: 5px;
   padding: 10px;
 }
@@ -71,10 +72,12 @@ html {
 
 .container {
   display: flex;
+  flex-wrap: wrap;
 }
 
 .container-column {
   display: flex;
+  flex-wrap: wrap;
   flex-direction: column;
 }
 
